--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Room Recreation Demo</title>
 	<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+	<script src="js/components/yOffsetter.js"></script>
 	<script src="js/geometries/room-geometry.js"></script>
 	<script src="js/components/room.js"></script>
+	<script src="js/components/furniture.js"></script>
 </head>
 <body>
 	<a-scene>
@@ -13,13 +15,29 @@
 		<a-pook-room
 			color="#ccc"
 			position="0 0 "
-			scale="2 2 2">		
+			scale="2 2 2">
+			<a-furniture
+				name="bed"
+				height="0.74"
+				width="1.40"
+				length="2"
+				rotation="0 90 0"
+				position="1.22 0 -1">
+			</a-furniture>
+			<a-furniture
+				name="door"
+				height="2"
+				width="0.85"
+				length="0.04"
+				rotation="0 90 0"
+				position="1.5 0 1">
+			</a-furniture>
 		</a-pook-room>
 		
 		<!--USER-->
 		<a-camera
-			position="0 7 0"
-			rotation="-90 0 0"
+			position="0 4 0"
+			rotation="-30 0 0"
 			fov="60">
 		</a-camera>
 	</a-scene>
