renamed length to depth and added in windows and clothes rail

--- a/demo.html
+++ b/demo.html
@@ -20,17 +20,45 @@
 				name="bed"
 				height="0.74"
 				width="1.40"
-				length="2"
+				depth="2"
 				rotation="0 90 0"
 				position="1.22 0 -1">
+			</a-furniture>
+			<a-furniture
+				name="clothes-rail"
+				height="1.50"
+				width="1.20"
+				depth="0.6"
+				position="-1.26 0 -1.8">
 			</a-furniture>
 			<a-furniture
 				name="door"
 				height="2"
 				width="0.85"
-				length="0.04"
+				depth="0.04"
+				color="#aaa"
 				rotation="0 90 0"
 				position="1.5 0 1">
+			</a-furniture>
+			<a-furniture
+				name="right-window"
+				height="1.55"
+				width="0.97"
+				depth="0.11"
+				rotation="0 90 0"
+				color="#aaa"
+				opacity="0.1"
+				position="-2.275 0.73 -0.975">
+			</a-furniture>
+			<a-furniture
+				name="left-window"
+				height="1.55"
+				width="0.97"
+				depth="0.11"
+				rotation="0 90 0"
+				color="#aaa"
+				opacity="0.1"
+				position="-2.275 0.73 0.975">
 			</a-furniture>
 		</a-pook-room>
 		
